Completed home page & Created placeholder pages

--- a/mcmods.html
+++ b/mcmods.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <link href="style.css" rel="stylesheet" type="text/css" />
-        <title>Frostbyte Games | Frostbyte Games</title>
+        <title>Mods | Frostbyte Games</title>
 		<link rel="icon" src = "favicon.ico">
     </head>
     
@@ -21,7 +21,7 @@
 			<a href="https://frostbytegames1.github.io/youtube.html">
 				YouTube
 			</a>
-			<a href="https://frostbytegames1.github.io/games.html">
+			<a href="https://frostbytegames1.github.io/mygames.html">
 				My Games
 			</a>
 			<div class="dropdown">
