Created the YouTube page

--- a/pokemon.html
+++ b/pokemon.html
@@ -4,8 +4,9 @@
     <head>
         <meta charset="UTF-8" />
         <link href="style.css" rel="stylesheet" type="text/css" />
-        <title>Pok&eacutemon | Frostbyte Games</title>
-		<link rel="icon" src = "favicon.ico">
+        <title>Pok&eacuteemon | Frostbyte Games</title>
+		<link rel="icon" href = "favicon.ico">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     
     <body>
@@ -15,18 +16,18 @@
 				<img src = "Logo.png" style = "height: 48px; width: 48px; vertical-align: middle;"> FROSTBYTE GAMES</img>
 			</a>
 			<a href="javascript:void(0);" class="icon" onclick="toggleNavbar()">
-				<img src = "Menu.png"></img>
+				<i class = "fa fa-bars" style = "font-size: 48px; line-height: 48px;"></i>
 			</a>
 			<a style = "pointer-events: none;"></a>
 			<a href="https://frostbytegames1.github.io/youtube.html">
 				YouTube
 			</a>
-			<a href="https://frostbytegames1.github.io/mygames.html">
+			<a href="https://frostbytegames1.github.io/games.html">
 				My Games
 			</a>
 			<div class="dropdown">
 				<button class="dropbtn" style = "height: 68px; vertical-align: middle; line-height: 48px;">
-					Minecraft &#9207
+					Minecraft <i class = "fa fa-caret-down"></i>
 				</button>
 				<div class="dropdown-content">
 				  <a href="https://frostbytegames1.github.io/mcmods.html">Mods</a>
@@ -55,7 +56,9 @@
 		<br />
 		
 		<h2 style = "text-align: center;">
-			<span style = "font-weight: normal">&#10052 WELCOME TO THE OFFICIAL SITE OF &#10052</span>
+			<span style = "font-weight: normal">
+				<i class = "fa fa-snowflake-o"></i> WELCOME TO THE OFFICIAL SITE OF <i class = "fa fa-snowflake-o"></i>
+			</span>
 			<br />
 			<span style = "font-size: 52px;">FROSTBYTE GAMES</span>
 		</h2>
@@ -87,6 +90,9 @@
 			and all of which can be accessed using the menu at the top.
 		</div>
 		
+		<br/>
+		<br/>
+		<br/>
 		<br/>
 		
 		<footer>
