Created MC Mods page

--- a/mcmods.html
+++ b/mcmods.html
@@ -57,7 +57,7 @@
 		
 		<h2 style = "text-align: center;">
 			<span style = "font-weight: normal">
-				<i class = "fa fa-snowflake-o"></i> WELCOME TO THE OFFICIAL SITE OF <i class = "fa fa-snowflake-o"></i>
+				<i class = "fa fa-snowflake-o"></i> MINECRAFT: JAVA EDITION MODS BY <i class = "fa fa-snowflake-o"></i>
 			</span>
 			<br />
 			<span style = "font-size: 52px;">FROSTBYTE GAMES</span>
@@ -65,35 +65,97 @@
 		
 		<hr/>
 		
-		<div class = "infobox">
-			<strong>What's a Frostbyte?</strong>
-			<br/>
-			<br/>
-			That's me! Your friendly neighborhood computer science student and aspiring game developer.
-			This is my website, where all of my projects and links are available for you to discover and enjoy.
+		<div style = "display: block; margin: 0 auto; text-align: center;">
+			<div class = "modbox" id = "slabsandstairs">
+				<a>
+					<strong>Frostbyte's Slabs & Stairs</strong>
+					<p></p>
+					<img class = "modicon" src = "slabsandstairs.png"></img>
+				</a>
+			</div>
+			
+			<div class = "modbox" id = "improvedinventory">
+				<a>
+					<strong>Frostbyte's Improved Inventory</strong>
+					<p></p>
+					<img class = "modicon" src = "improvedinventory.png"></img>
+				</a>
+			</div>
+			
+			<div class = "modbox" id = "maximummobility">
+				<a>
+					<strong>Frostbyte's Maximum Mobility</strong>
+					<p></p>
+					<img class = "modicon" src = "maximummobility.png"></img>
+				</a>
+			</div>
+			
+			<div class = "modbox" id = "comingsoon">
+				<a>
+					<strong>COMING SOON</strong>
+					<p></p>
+					<img class = "modicon" src = "comingsoon.png"></img>
+				</a>
+			</div>
+		</div>
+		
+		<div id="modal" class="modal">
 		</div>
 		
 		<br/>
+		<br/>
+		<br/>
+		<br/>
 		
-		<div class = "infobox">
-			<strong>What can I do here?</strong>
-			<br/>
-			<br/>
-			On this site you'll find:
-			<ul>
-				<li>Minecraft Mods</li>
-				<li>Minecraft Resource Packs</li>
-				<li>Pok&eacutemon Fan Games & ROM Hacks</li>
-				<li>Original Games</li>
-			</ul>
-			and much more, all made by yours truly,
-			and all of which can be accessed using the menu at the top.
-		</div>
-		
-		<br/>
-		<br/>
-		<br/>
-		<br/>
+		<script>
+			const modal = document.getElementById('modal');
+
+			document.getElementById("slabsandstairs").onclick = function() {
+				modal.innerHTML = `
+					<div class = "modal-content">
+						<iframe src = "slabsandstairs.html" width = "100%" height = "100%" frameborder = "0"></iframe>
+					</div>
+				`;
+				modal.style.display = "block";
+			}
+			
+			document.getElementById("improvedinventory").onclick = function() {
+				modal.innerHTML = `
+					<div class = "modal-content">
+						<iframe src = "improvedinventory.html" width = "100%" height = "100%" frameborder = "0"></iframe>
+					</div>
+				`;
+				modal.style.display = "block";
+			}
+			
+			document.getElementById("maximummobility").onclick = function() {
+				modal.innerHTML = `
+					<div class = "modal-content">
+						<iframe src = "maximummobility.html" width = "100%" height = "100%" frameborder = "0"></iframe>
+					</div>
+				`;
+				modal.style.display = "block";
+			}
+			
+			document.getElementById("comingsoon").onclick = function() {
+				modal.innerHTML = `
+					<div class = "modal-content" style = "text-align: center;">
+						<p>
+							<em>Coming Soon<em>
+							<br/>
+						</p>
+						<img src = "comingsoon.png" style = "height: 256px;"></img>
+					</div>
+				`;
+				modal.style.display = "block";
+			}
+
+			window.onclick = function(event) {
+				if (event.target == modal) {
+				modal.style.display = "none";
+				}
+			}
+		</script>
 		
 		<footer>
 			<p>&copy 2023 FrostbyteGames<br>
