--- a/mcresourcepacks.html
+++ b/mcresourcepacks.html
@@ -57,7 +57,7 @@
 		
 		<h2 style = "text-align: center;">
 			<span style = "font-weight: normal">
-				<i class = "fa fa-snowflake-o"></i> WELCOME TO THE OFFICIAL SITE OF <i class = "fa fa-snowflake-o"></i>
+				<i class = "fa fa-snowflake-o"></i> MINECRAFT: JAVA EDITION RESOURCE PACKS BY <i class = "fa fa-snowflake-o"></i>
 			</span>
 			<br />
 			<span style = "font-size: 52px;">FROSTBYTE GAMES</span>
@@ -66,28 +66,7 @@
 		<hr/>
 		
 		<div class = "infobox">
-			<strong>What's a Frostbyte?</strong>
-			<br/>
-			<br/>
-			That's me! Your friendly neighborhood computer science student and aspiring game developer.
-			This is my website, where all of my projects and links are available for you to discover and enjoy.
-		</div>
-		
-		<br/>
-		
-		<div class = "infobox">
-			<strong>What can I do here?</strong>
-			<br/>
-			<br/>
-			On this site you'll find:
-			<ul>
-				<li>Minecraft Mods</li>
-				<li>Minecraft Resource Packs</li>
-				<li>Pok&eacutemon Fan Games & ROM Hacks</li>
-				<li>Original Games</li>
-			</ul>
-			and much more, all made by yours truly,
-			and all of which can be accessed using the menu at the top.
+			<em>There doesn't seem to be anything here.</em>
 		</div>
 		
 		<br/>
