--- a/pokemon.html
+++ b/pokemon.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <link href="style.css" rel="stylesheet" type="text/css" />
-        <title>Pok&eacuteemon | Frostbyte Games</title>
+        <title>Pok&eacutemon | Frostbyte Games</title>
 		<link rel="icon" href = "favicon.ico">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -57,7 +57,7 @@
 		
 		<h2 style = "text-align: center;">
 			<span style = "font-weight: normal">
-				<i class = "fa fa-snowflake-o"></i> WELCOME TO THE OFFICIAL SITE OF <i class = "fa fa-snowflake-o"></i>
+				<i class = "fa fa-snowflake-o"></i> POK&EacuteMON FAN GAMES BY <i class = "fa fa-snowflake-o"></i>
 			</span>
 			<br />
 			<span style = "font-size: 52px;">FROSTBYTE GAMES</span>
@@ -66,34 +66,13 @@
 		<hr/>
 		
 		<div class = "infobox">
-			<strong>What's a Frostbyte?</strong>
-			<br/>
-			<br/>
-			That's me! Your friendly neighborhood computer science student and aspiring game developer.
-			This is my website, where all of my projects and links are available for you to discover and enjoy.
+			<em>There doesn't seem to be anything here.</em>
 		</div>
 		
-		<br/>
-		
-		<div class = "infobox">
-			<strong>What can I do here?</strong>
-			<br/>
-			<br/>
-			On this site you'll find:
-			<ul>
-				<li>Minecraft Mods</li>
-				<li>Minecraft Resource Packs</li>
-				<li>Pok&eacutemon Fan Games & ROM Hacks</li>
-				<li>Original Games</li>
-			</ul>
-			and much more, all made by yours truly,
-			and all of which can be accessed using the menu at the top.
-		</div>
-		
-		<br/>
-		<br/>
-		<br/>
-		<br/>
+		<br />
+		<br />
+		<br />
+		<br />
 		
 		<footer>
 			<p>&copy 2023 FrostbyteGames<br>
